--- a/rockPaperScissors.html
+++ b/rockPaperScissors.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <script>
-    function computerPlay(){
+    function computerPlay() {
         let randomNum = Math.floor((Math.random()*3)+1);
         switch (randomNum) {
             case 1:
@@ -14,6 +14,37 @@
                 break
         }
     }
+
+    function singleRound(playerChoice) {
+        playerChoice.toLowerCase();
+        console.log(playerChoice);
+        
+        let computerChoice = computerPlay();
+        console.log(computerChoice);
+
+        if (playerChoice == 'rock' && computerChoice == 'scissors'){
+            return "You Win! Rock beats Scissors!"
+        }
+        else if (playerChoice == 'scissors' && computerChoice == 'paper') {
+            return "You Win! Scissors beats Paper!"
+        }
+        else if (playerChoice == 'paper' && computerChoice == 'rock') {
+            return "You Win! Paper beats Rock!"
+        }
+        else if (playerChoice == 'paper' && computerChoice == 'scissors') {
+            return "You Lose. Scissors beats Paper."
+        }
+        else if (playerChoice == 'rock' && computerChoice == 'paper') {
+            return "You Lose. Paper beats Rock."
+        }
+        else if (playerChoice == 'scissors' && computerChoice == 'rock') {
+            return "You Lose. Rock beats Scissors."
+        }
+        else if (playerChoice == computerChoice) {
+            return "It is a tie"
+        }
+          else{
+            return "You Lose. You have to choose rock, paper, or scissors to win."
+        }
+    }
 </script>
-<head>></head>
-<body></body>
