--- a/rockPaperScissors.html
+++ b/rockPaperScissors.html
@@ -1,55 +1,12 @@
 <!DOCTYPE html>
-<script>
-    function computerPlay() {
-        let randomNum = Math.floor((Math.random()*3)+1);
-        switch (randomNum) {
-            case 1:
-                return 'rock';
-                break;
-            case 2: 
-                return 'paper';
-                break;
-            case 3:
-                return 'scissors';
-                break
-        }
-    }
+<header>
+<title>Rock Paper Scissors</title>
+</header>
 
-    function singleRound(playerChoice) {
-        playerChoice = playerChoice.toLowerCase();
-        
-        let computerChoice = computerPlay();
+<main>
+<button type="button" id="rock">Rock</button>
+<button type="button" id="paper">Paper</button>
+<button type="button" id="scissors">Scissors</button>
+</main>
 
-        if (playerChoice == 'rock' && computerChoice == 'scissors'){
-            return "You Win! Rock beats Scissors!"
-        }
-        else if (playerChoice == 'scissors' && computerChoice == 'paper') {
-            return "You Win! Scissors beats Paper!"
-        }
-        else if (playerChoice == 'paper' && computerChoice == 'rock') {
-            return "You Win! Paper beats Rock!"
-        }
-        else if (playerChoice == 'paper' && computerChoice == 'scissors') {
-            return "You Lose. Scissors beats Paper."
-        }
-        else if (playerChoice == 'rock' && computerChoice == 'paper') {
-            return "You Lose. Paper beats Rock."
-        }
-        else if (playerChoice == 'scissors' && computerChoice == 'rock') {
-            return "You Lose. Rock beats Scissors."
-        }
-        else if (playerChoice == computerChoice) {
-            return "It is a tie"
-        }
-          else{
-            return "You Lose. You have to choose rock, paper, or scissors to win."
-        }
-    }
-
-    function game() {
-        for(i = 0; i <= 5; i++) {
-            let choice = prompt('Pick rock, paper, or scissors!');
-            alert (singleRound(choice));
-        }
-    }
-</script>
+<script src='rockPaperScissors.js'></script>
