Updated HTML page structure, added header text.

--- a/rockPaperScissors.html
+++ b/rockPaperScissors.html
@@ -4,9 +4,18 @@
 </header>
 
 <main>
-<button type="button" id="rock">Rock</button>
-<button type="button" id="paper">Paper</button>
-<button type="button" id="scissors">Scissors</button>
+    <h1>Click Rock, Paper, or Scissors to start! Best out of 5.</h1>
+    <button type="button" id="rock">Rock</button>
+    <button type="button" id="paper">Paper</button>
+    <button type="button" id="scissors">Scissors</button>
+    <content>
+        <div id="singleRound">
+            <h2>Round Result</h2>
+        </div>
+        <div id="runningScore">
+            <h2>Running Total</h2>
+        </div>
+    </content>
 </main>
 
 <script src='rockPaperScissors.js'></script>
