Added UI for single round.

--- a/rockPaperScissors.html
+++ b/rockPaperScissors.html
@@ -4,7 +4,7 @@
 </header>
 
 <main>
-    <h1>Click Rock, Paper, or Scissors to start! Best out of 5.</h1>
+    <h1>Click Rock, Paper, or Scissors to start!</h1>
     <button type="button" id="rock">Rock</button>
     <button type="button" id="paper">Paper</button>
     <button type="button" id="scissors">Scissors</button>
